# ImageAlignmentCpp

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  Doxyfile  ImageAlignment.cpp  ImageAlignment.hpp  KLTTracker.cpp  KLTTracker.hpp  README.md  TestKLT.cpp  runKLT
data/: npyToImg.py
